--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>D. Chacón | Cybersecurity Portfolio</title>
+    <title>Robert B. | Cybersecurity Portfolio</title>
   </head>
   <body class="bg-black text-white">
     <div id="app"></div>
